# ivoryos-barista-demo

./: .gitignore  LICENSE  MANIFEST.in  README.md  app.py  index.html  main.py  pyproject.toml  requirements.txt
barista_demo/: __init__.py  coffee_maker.py  customer.py  demo.py
barista_visual_plugin/: __init__.py  plugin.py  runtime.py
barista_visual_plugin/static/css/: barista_visual.css
barista_visual_plugin/static/js/: barista_visual.js
barista_visual_plugin/templates/: barista_visual.html
static/css/: style.css
static/js/: main.js
tests/: __init__.py  test_barista_demo.py
