[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivoryos-barista-demo"
version = "0.1.0"
description = "IvoryOS barista demo with a blueprint visual plugin."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ivoryos>=1.5.19",
    "ax-platform",
    "flask",
]

[project.scripts]
ivoryos-barista-demo = "main:main"

[tool.setuptools]
include-package-data = true
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["barista_demo*", "barista_visual_plugin*"]

[tool.setuptools.package-data]
barista_visual_plugin = [
    "templates/*.html",
    "static/css/*.css",
    "static/js/*.js",
    "static/img/*.svg",
]
